add offiline user

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -26,5 +26,16 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "backendless",
+      "urls": ["https://api.backendless.com/E740B979-B083-ED0C-FFD3-2EDE3126C400/C1B30CED-2B0D-425D-BCD1-3A4C50A84765/data/Users/44738C0C-CC03-4B65-ACEB-CEF7D7BF6484"],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 11,
+        "maxAge": "1d1h"
+      }
+    }
   ]
 }
