--- a/angular.json
+++ b/angular.json
@@ -35,8 +35,7 @@
             ],
             "scripts": [],
             "serviceWorker": true,
-            "ngswConfigPath": "ngsw-config.json",
-            "webWorkerTsConfig": "tsconfig.worker.json"
+            "ngswConfigPath": "ngsw-config.json"
           },
           "configurations": {
             "production": {
